force-app/main/default/objects/Activity/fields/ARTL_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Account_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>