force-app/main/default/objects/Activity/fields/ARTL_Action_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Action_Plan_Name__c</fullName>
    <displayFormat>ACT-{0000000}</displayFormat>
    <label>Action Plan Name</label>
    <type>AutoNumber</type>
</CustomField>