force-app/main/default/objects/Activity/fields/ARTL_Agenda__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Agenda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agenda</label>
    <type>TextArea</type>
</CustomField>