force-app/main/default/objects/Activity/fields/ARTL_altKey__c.field-meta.xml
<CustomField>
    <fullName>ARTL_altKey__c</fullName>
    <label>Alt Key</label>
    <type>TextArea</type>
</CustomField>