force-app/main/default/objects/Activity/fields/ARTL_CGTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_CGTransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>