force-app/main/default/objects/Activity/fields/ARTL_Description__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>