force-app/main/default/objects/Activity/fields/ARTL_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Opportunity Not Created</fullName>
            </value>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>Churn Threat</fullName>
            </value>
            <value>
                <fullName>SR Raised</fullName>
            </value>
            <value>
                <fullName>MBR</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>