force-app/main/default/objects/Activity/fields/ARTL_Immediate_steps_engagement_plans__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Immediate_steps_engagement_plans__c</fullName>
    <label>Immediate steps and engagement plans</label>
    <type>TextArea</type>
</CustomField>