force-app/main/default/objects/Activity/fields/ARTL_InboundRequestPayload__c.field-meta.xml
<CustomField>
    <fullName>ARTL_InboundRequestPayload__c</fullName>
    <label>Inbound Request Payload</label>
    <type>TextArea</type>
</CustomField>