force-app/main/default/objects/Activity/fields/ARTL_jeopardyReslnEta__c.field-meta.xml
<CustomField>
    <fullName>ARTL_jeopardyReslnEta__c</fullName>
    <label>Jeopardy Response Date</label>
    <type>Date</type>
</CustomField>