force-app/main/default/objects/Activity/fields/ARTL_Key_competitors__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Key_competitors__c</fullName>
    <label>Key competitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ARTL_Competitor</valueSetName>
    </valueSet>
</CustomField>