force-app/main/default/objects/Activity/fields/ARTL_Key_stake_holder__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Key_stake_holder__c</fullName>
    <label>Key stake-holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>