force-app/main/default/objects/Activity/fields/ARTL_Key_timelines__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Key_timelines__c</fullName>
    <label>Key timelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>