force-app/main/default/objects/Activity/fields/ARTL_LOC_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LOC_Acceptance_Date__c</fullName>
    <label>LOC Acceptance Date</label>
    <type>DateTime</type>
</CustomField>