force-app/main/default/objects/Activity/fields/ARTL_LOC_Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LOC_Bill_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LOC Bill Start Date</label>
    <type>DateTime</type>
</CustomField>