force-app/main/default/objects/Activity/fields/ARTL_LOC_Task_Approval__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LOC_Task_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOC Validation Approval</label>
    <referenceTo>ARTL_LOC_Task_Approval__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>