force-app/main/default/objects/Activity/fields/ARTL_LOC_Trigger_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LOC_Trigger_to_Customer__c</fullName>
    <label>LOC Trigger to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>