force-app/main/default/objects/Activity/fields/ARTL_locAcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>ARTL_locAcceptanceCriteria__c</fullName>
    <label>Loc Acceptance Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deemed</fullName>
            </value>
            <value>
                <fullName>Non-Deemed</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>