force-app/main/default/objects/Activity/fields/ARTL_locRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_locRejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer End Hardware Pending-NSG</fullName>
            </value>
            <value>
                <fullName>Customer Denied –Business Plan Changed-PM</fullName>
            </value>
            <value>
                <fullName>Customer Denied –Service Issue-NSG</fullName>
            </value>
            <value>
                <fullName>Customer Denied –Billing Concern-PM</fullName>
            </value>
            <value>
                <fullName>Customer Denied –Location Shifted-PM</fullName>
            </value>
            <value>
                <fullName>Customer Denied –Delay in Delivery-PM</fullName>
            </value>
            <value>
                <fullName>Customer End Testing Pending –NSG</fullName>
            </value>
            <value>
                <fullName>Customer Denied –B/W throughput issue-NSG</fullName>
            </value>
            <value>
                <fullName>Customer Denied-Link Not Tested-NSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>