force-app/main/default/objects/Activity/fields/ARTL_locStatus__c.field-meta.xml
<CustomField>
    <fullName>ARTL_locStatus__c</fullName>
    <label>Loc Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>