force-app/main/default/objects/Activity/fields/ARTL_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Order_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>