force-app/main/default/objects/Activity/fields/ARTL_ParentTaskId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ParentTaskId__c</fullName>
    <label>Parent Task Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>