force-app/main/default/objects/Activity/fields/ARTL_Rejection_Category__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Rejection_Category__c</fullName>
    <label>Rejection Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <label>In Valid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>