force-app/main/default/objects/Activity/fields/ARTL_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>