force-app/main/default/objects/Activity/fields/ARTL_RequestPayload__c.field-meta.xml
<CustomField>
    <fullName>ARTL_RequestPayload__c</fullName>
    <label>Request Payload</label>
    <type>TextArea</type>
</CustomField>