force-app/main/default/objects/Activity/fields/ARTL_ResponsePayload__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ResponsePayload__c</fullName>
    <label>Response Payload</label>
    <type>TextArea</type>
</CustomField>