force-app/main/default/objects/Activity/fields/ARTL_Sizing__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Sizing__c</fullName>
    <label>Sizing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>