force-app/main/default/objects/Activity/fields/ARTL_TaskId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TaskId__c</fullName>
    <label>TaskId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>