force-app/main/default/objects/Activity/fields/ARTL_TaskType__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OV</fullName>
            </value>
            <value>
                <fullName>PM NW Jeopardy</fullName>
            </value>
            <value>
                <fullName>PM Workways</fullName>
            </value>
            <value>
                <fullName>PM approval for LoC</fullName>
            </value>
            <value>
                <fullName>PM Approval</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>MRR</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>Meeting Reminder</fullName>
            </value>
            <value>
                <fullName>PMWTask</fullName>
            </value>
            <value>
                <fullName>Validate Hardware Delivery</fullName>
            </value>
            <value>
                <fullName>Single Record</fullName>
            </value>
            <value>
                <fullName>Delivery Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>