force-app/main/default/objects/Activity/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>