force-app/main/default/objects/Activity/fields/Caller_Id__c.field-meta.xml
<CustomField>
    <fullName>Caller_Id__c</fullName>
    <label>Caller Id</label>
    <type>Phone</type>
</CustomField>