force-app/main/default/objects/Activity/fields/Created_for_PM__c.field-meta.xml
<CustomField>
    <fullName>Created_for_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created for PM</label>
    <type>Checkbox</type>
</CustomField>