force-app/main/default/objects/Activity/fields/CustomerDenied__c.field-meta.xml
<CustomField>
    <fullName>CustomerDenied__c</fullName>
    <label>Customer Denied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>