force-app/main/default/objects/Activity/fields/CustomerL2POIDetail__c.field-meta.xml
<CustomField>
    <fullName>CustomerL2POIDetail__c</fullName>
    <label>Customer L2 POI Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>