force-app/main/default/objects/Activity/fields/DenialReason__c.field-meta.xml
<CustomField>
    <fullName>DenialReason__c</fullName>
    <label>Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>