force-app/main/default/objects/Activity/fields/Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>Execution_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Log</label>
    <referenceTo>Execution_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>