force-app/main/default/objects/Activity/fields/External_Contacts__c.field-meta.xml
<CustomField>
    <fullName>External_Contacts__c</fullName>
    <description>These are additional recipients who need to be added to event invitation and are not contacts or leads.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please add only non-existing contacts. Also, ensure Email IDs are valid and separated by comma</inlineHelpText>
    <label>External Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>