force-app/main/default/objects/Activity/fields/Loc_Trigger_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Loc_Trigger_To_Customer__c</fullName>
    <label>Loc Trigger To Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>