force-app/main/default/objects/Activity/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>