force-app/main/default/objects/Activity/fields/Meeting_Notes_External__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes_External__c</fullName>
    <label>Meeting Notes(External)</label>
    <type>TextArea</type>
</CustomField>