force-app/main/default/objects/Activity/fields/MS_Teams_Meeting__c.field-meta.xml
<CustomField>
    <fullName>MS_Teams_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to setup a block MS-teams calendar and generate teams invite</description>
    <label>MS Teams Meeting</label>
    <type>Checkbox</type>
</CustomField>