force-app/main/default/objects/Activity/fields/Number_of_days_for_Deemed_LOC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_for_Deemed_LOC__c</fullName>
    <label>Number of days for Deemed LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>