force-app/main/default/objects/Activity/fields/ReferenceLSIforL2POIDetails__c.field-meta.xml
<CustomField>
    <fullName>ReferenceLSIforL2POIDetails__c</fullName>
    <label>Reference LSI for L2 POI Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>