force-app/main/default/objects/Activity/fields/SR_FTR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_FTR_Number__c</fullName>
    <label>SR/FTR Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>