force-app/main/default/objects/Activity/fields/System_Error__c.field-meta.xml
<CustomField>
    <fullName>System_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Error</label>
    <type>TextArea</type>
</CustomField>